# phenix-tools

./: .gitignore  .maintenance-trigger  .stitch.json  .tend.json  CRATES.md  Cargo.toml  README.md  devenv.nix  flake.nix  maintenance.nix  sync.json
.github/workflows/: ci.yml  finalize-tools-scope.yml  migrate-away-from-tend.yml  prepare-thin-tools-pr.yml  publish-thin-source-pr.yml  refresh-provider-lock.yml  run-maintenance.yml  run-thin-generator-pr.yml
crates/phenix-mcp-core/: .tend.json  Cargo.toml
crates/phenix-mcp-core/src/: audit.rs  input.rs  lib.rs  lock.rs  mcp.rs  result.rs  roots.rs  runner.rs  safety.rs  types.rs
crates/pt-compat/: Cargo.toml
crates/pt-compat/src/: gate.rs  main.rs
crates/stitch/: Cargo.toml
crates/stitch-cli/: Cargo.toml
crates/stitch-cli/src/: main.rs
crates/stitch-mcp/: .tend.json  Cargo.toml
crates/stitch-mcp/src/: main.rs  prompts.rs  resources.rs  tools.rs
crates/stitch/src/: config.rs  exec.rs  git.rs  graph.rs  lib.rs  main.rs  model.rs  recipe.rs  status.rs  sync.rs  validate.rs
crates/stitch/src/changeset/: abort.rs  commit.rs  mod.rs  new.rs  plan.rs  push.rs  set_files.rs  set_message.rs  validate.rs
crates/stitch/src/graph/: derive.rs  inventory.rs  lock.rs  mod.rs  render.rs  topo.rs  validate.rs
crates/tend/: .tend.json  Cargo.toml
crates/tend-cli/: Cargo.toml
crates/tend-cli/src/: main.rs
crates/tend-mcp/: .tend.json  Cargo.toml
crates/tend-mcp/src/: main.rs  prompts.rs  resources.rs  tools.rs
crates/tend/src/: config.rs  discover.rs  execute.rs  lib.rs  main.rs  model.rs  planner.rs  profiles.rs  report.rs  workspace.rs
crates/tend/src/checks/: command.rs  files.rs  mod.rs  text.rs
crates/tend/tests/: clippy_integration.rs
modules/: default.nix  flake-module.nix  standalone.nix  workspace.nix
src/: gate.rs  graph.rs  main.rs  node.rs  sync.rs
