[package]
name = "phenix-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phenix-tools"
path = "src/main.rs"

[[bin]]
name = "pt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["crates/tend", "crates/stitch", "crates/phenix-mcp-core", "crates/tend-mcp", "crates/stitch-mcp"]
resolver = "2"
