[package]
name = "stitch-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stitch-mcp"
path = "src/main.rs"

[dependencies]
phenix-mcp-core = { path = "../phenix-mcp-core" }
tend = { path = "../tend" }
stitch = { path = "../stitch" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
