[package]
name = "tend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tend"
path = "src/main.rs"

[lib]
name = "tend"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
